[package]
name = "yndd-openapi"
version = "0.1.0"
license = "Apache-2.0"
authors = ["henderiw <wim.henderickx@gmail.com>"]
edition = "2021"
keywords = ["kubernetes", "k8s"]
repository = "https://github.com/Arnavion/k8s-openapi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = [
	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }
schemars = { version = "0.8.1", default-features = false, features = ["derive"] }
kube = { version = "0.74.0", default-features = false, features = ["derive"] }
# k8s-openapi = { version = "0.15.0", default-features = false, optional = true }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }

[features]
# Each feature corresponds to a supported version of Yndd
v1alpha1 = []